# eye_gaze_tracker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
eye_gaze_tracker/: eval.py  infer.py  train.py
eye_gaze_tracker/config/: cnfg_mobilenet.json  cnfg_mobilenet.txt  full_train_cfg.json  small_train_cfg.json
eye_gaze_tracker/data/: small_data.h5
eye_gaze_tracker/src/: Dataset.py  EyeGaze.py  Trainer.py
eye_gaze_tracker/weights/: mobile_net_small100_00067.pth
