[tool.poetry]
name = "eye-gaze-tracker"
version = "0.1.0"
description = "MLOps2023 MSU CMC task"
authors = ["Artem Sokolov"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
albumentations = "1.0.3"
face-alignment = "1.4.1"
h5py = "3.9.0"
numpy = "1.24.4"
opencv-python = "4.8.0.76"
opencv-python-headless = "4.8.0.76"
scikit-learn = "1.2.0"
timm = "0.9.2"
tqdm = "4.66.1"
pre-commit = "3.4.0"
torch = "2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
